--- a/pom.xml
+++ b/pom.xml
@@ -52,12 +52,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
+                <version>2.22.2</version>
             </plugin>
             <plugin>
                 <groupId>io.thorntail</groupId>
                 <artifactId>thorntail-maven-plugin</artifactId>
-                <version>2.4.0.Final</version>
+                <version>${version.thorntail}</version>
                 <executions>
                     <execution>
                         <goals>
